# flybase

./: .bumpversion.cfg  .flake8  .gitignore  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  index.rst
src/bio2bel_fb/: __init__.py  constants.py  manager.py  models.py  parser.py
src/bio2bel_flybase/: __init__.py  __main__.py  cli.py  constants.py  contants.py  manager.py  models.py  parser.py  run.py  to_belns.py
tests/: constants.py  test_parse.py
