##########################
# Setup.py Configuration #
##########################
[metadata]
name = bio2bel_flybase
version = 0.0.1-dev
description = Nomenclature for drosophila genes from FlyBase
long_description = file: README.rst

url = https://github.com/bio2bel/flybase
download_url = https://github.com/bio2bel/flybase/releases
project_urls =
    Bug Tracker = https://github.com/bio2bel/flybase/issues
    Source Code = https://github.com/bio2bel/flybase

license = MIT
license_file = LICENSE

author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    Biological Expression Language
    Bio2BEL

[options]
install_requires =
    bio2bel
    pybel
    sqlalchemy
    tqdm
python_requires = >=3.6
packages = find:
package_dir =
    = src
zip-safe = false

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    bio2bel_flybase = bio2bel_flybase.cli:main
bio2bel =
    flybase = bio2bel_flybase

[options.packages.find]
where = src

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bio2bel_flybase

[coverage:paths]
source =
    src/bio2bel_flybase
    .tox/*/lib/python*/site-packages/bio2bel_flybase

[coverage:report]
show_missing = True
